# text_to_image_retriever

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: download_coco.sh  download_dota.sh
src/app_streamlit/: __init__.py  app.py  cli.py  settings.py
src/app_streamlit/pages/: 1_Retrieval.py  2_Heatmap.py  3_Admin.py
src/app_streamlit/ui/: components.py
src/app_streamlit/utils/: __init__.py  geo.py  images.py  state.py
src/poc/: config.py  consumer.py  dataset_manifest.py  image_provider.py  lancedb_service.py  lancedb_store.py  pe_model.py  producer.py  retriever.py  rmq.py  test_image_provider.py
src/poc/streamlit_app/: app.py
src/poc/streamlit_app/pages/: 1_Retrieval.py  2_Heatmap.py  3_Admin.py
src/poc/streamlit_app/utils/: geo.py  images.py  state.py
src/retriever/: __init__.py
src/retriever/adapters/: __init__.py  clip_embedder.py  embedder_base.py  embedder_factory.py  lancedb_adapter.py  message_bus_rmq.py  message_bus_rmq_callback.py  message_bus_rmq_config.py  message_bus_rmq_polling.py  pe_core.py  remote_clip_embedder.py  siglip2_embedder.py  tile_store.py  tile_store_local.py  tiles_repo_sqlite.py
src/retriever/clients/: __init__.py  retriever.py  tilesdb.py  vectordb.py
src/retriever/components/embedder_worker/: __init__.py  cli.py  settings.py  worker.py
src/retriever/components/tiler/: __init__.py  cli.py  orthophoto.py  satellite.py  settings.py
src/retriever/components/tiles_db/: __init__.py  admin_cli.py  cli.py  models.py  repository.py  service.py  settings.py  sqlite_adapter.py
src/retriever/components/tyler/: __init__.py  cli.py  coco.py  dota.py  factory.py  orthophoto.py  satellite.py  settings.py
src/retriever/components/tyler/factories/: __init__.py  tyler_factory.py
src/retriever/components/tyler/models/: __init__.py  base_config.py  coco_config.py  dota_config.py  orthophoto_config.py  satellite_config.py  strip_config.py
src/retriever/components/tyler/settings/: __init__.py  coco_settings.py  dota_settings.py  orthophoto_settings.py  satellite_settings.py  strip_settings.py  (+2 more)
src/retriever/components/victor/: __init__.py  cli.py  coco_manifest.py  daemon.py  manager.py  scheduler.py  settings.py
src/retriever/core/: __init__.py  geometry.py  interfaces.py  schemas.py  tile_id.py
src/retriever/scripts/: __init__.py  download_orthophoto.py
src/retriever/services/retriever/: __init__.py  app.py  cli.py  settings.py
src/retriever/services/vectordb/: __init__.py  app.py  cli.py  settings.py
tests/: test_geometry.py  test_message_schema.py  test_tile_id.py  test_vectordb_service.py
(+7 files in other folders)
