[project]
name = "retriever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "ftfy>=6.3.1",
    "geopandas>=1.1.2",
    "lancedb>=0.26.1",
    "numpy>=2.4.0",
    "orjson>=3.11.5",
    "pandas>=2.3.3",
    "pika>=1.3.2",
    "pillow>=12.1.0",
    "planetary-computer>=1.0.0",
    "pyarrow>=22.0.0",
    "pycocotools>=2.0.11",
    "pydantic-settings>=2.12.0",
    "pydeck>=0.9.1",
    "pyproj>=3.7.2",
    "pystac-client>=0.9.0",
    "pytest>=9.0.2",
    "rasterio>=1.4.4",
    "regex>=2025.11.3",
    "shapely>=2.1.2",
    "streamlit>=1.52.2",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]

[project.scripts]
build-manifest = "poc.dataset_manifest:build_entry"
producer = "poc.producer:run"
consumer = "poc.consumer:run"
retriever = "poc.retriever:run"
test-ortho = "poc.test_image_provider:run"
lancedb-admin = "poc.lancedb_admin:main"

[tool.uv]
package = true

